# FastAPI-Kafka

./: .env.example  Makefile  README.md  pyproject.toml
app/: kafka_test_consumer.py  kafka_test_producer.py
app/application/api/: main.py  schemas.py
app/application/api/dependencies/: containers.py
app/application/api/messages/: filters.py  handlers.py  schemas.py
app/application/api/websockets/: __init__.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exception/: messages.py
app/domain/exceptions/: messages.py
app/domain/values/: base.py  messages.py
app/infra/message_brokers/: base.py  converters.py  kafka.py
app/infra/repositories/: messages.py
app/infra/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/logic/: init.py  mediator.py
app/logic/commands/: messages.py
app/logic/events/: base.py  messages.py
app/logic/exception/: base.py  mediator.py  messages.py
app/logic/exceptions/: base.py  messages.py
app/logic/mediator/: base.py  event.py
app/logic/queries/: base.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_messages.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: test_messages.py
app/tests/values/: test_messages.py
docker_compose/: storages.yaml
