[tool.poetry]
name = "some-app"
version = "0.1.0"
description = ""
authors = ["xanssun <xanssun@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["all"], version = "^0.32.0"}
fastapi = {extras = ["httpx"], version = "^0.115.5"}
ipython = "^8.29.0"
pytest = "^8.3.3"
faker = "^30.8.2"
pytest-asyncio = "^0.24.0"
punq = "^0.7.0"
httpx = "^0.27.2"
motor = "^3.6.0"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
